--- a/index.html
+++ b/index.html
@@ -42,9 +42,71 @@
 </li>
 <li><p><b>奖学金</b>: 吴旭奖学金(2021.10)、特等综合奖学金(2020.10) <br /></p>
 </li>
-<li><p><b>荣誉称号</b>: 校“三好学生”荣誉称号、、校“优秀学生干部”荣誉称号、校“优秀共青团干部”荣誉称号 <br /></p>
+<li><p><b>荣誉称号</b>: 校“三好学生”荣誉称号、校“优秀学生干部”荣誉称号、校“优秀共青团干部”荣誉称号 <br /></p>
 </li>
 </ul>
 </td></tr></table>
 <h2>项目经历</h2>
- 
+<ul>
+<li><p>NLP <br />
+</li>
+</ul>
+<ul>
+<li><p>基于4D混沌系统和遗传退火算法的医学影像信息系统 <br />
+</li>
+</ul>
+<ul>
+<li><p>基于多源数据融合的低剂量CT图像修复及肺部多病种检测系统 <br />
+</li>
+</ul>  
+<ul>
+<li><p>基于智能计算的车辆防撞系统 <br />
+</li>
+</ul>  
+<ul>
+<ul>
+<li><p>企业人事信息管理系统 <br />
+</li>
+</ul>  
+<ul>
+<h2>竞赛获奖</h2>
+<ul>
+<li><p>(2022.8) 全国大学生信息安全竞赛 <br />
+</li>
+</ul>
+<ul>
+<li><p>(2022.8) 中国高校计算机大赛--网络技术挑战赛 <br />
+</li>
+</ul>  
+<ul>
+<li><p>(2022.7) 中国机器人及人工智能大赛 <br />
+</li>
+</ul>  
+<ul>
+<li><p>(2022.5) 中国大学生计算机设计大赛--软件类 <br />
+</li>
+</ul> 
+<ul>
+<li><p>(2022.5) 中国大学生计算机设计大赛--大数据主题赛 <br />
+</li>
+</ul> 
+<ul>
+<li><p>(2021.10) 全国大学生数学建模竞赛 国家级二等奖 <br />
+</li>
+</ul>  
+<ul>
+<li><p>(2020.10) 全国高校大学生数学竞赛 省级三等奖 <br />
+</li>
+</ul> 
+<ul>
+<li><p>(2020.10)全国大学生数学建模竞赛 省级三等奖 <br />
+</li>
+</ul>    
+<div id="footer">
+<div id="footer-text">
+<br>Page generated 2022-05-19, by <a href="https://zexiansun2001.github.io/">Zexian Sun</a>.
+</div>
+</div>
+</div>
+</body>
+</html>
