--- a/EnHome.html
+++ b/EnHome.html
@@ -13,7 +13,7 @@
 <h1>Zexian Sun (孙泽贤)</h1>
 </div>
 <table class="imgtable"><tr><td>
-<a href="https://xuaikun.github.io/"><img src="picture/Aikun_Xu.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
+<a href="https://zexiansun2001.github.io/"><img src="picture/ZexianSun.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
 <td align="left"><p>M.Sc. Student,<br />
 <a href="https://cse.csu.edu.cn/">School of Computer Science and Engineering</a>, <br />
 Computer Building, North Campus, <br />
