--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <table class="imgtable"><tr><td>
 <a href="https://zexiansun2001.github.io/"><img src="picture/ZexianSun.jpg" alt="alt text" width="120px" /></a>&nbsp;</td>
 <td align="left"><p>2019级本科生,中共党员<br />
-数据科学与大数据技术, <a href="https://cse.csu.edu.cn/">网络空间安全学院（密码学院）</a>, <br />
+数据科学与大数据技术, <a href="https://hd.hainanu.edu.cn/scscs/">网络空间安全学院（密码学院）</a>, <br />
 老理工楼, 海甸校区, <br />
 <a href="https://ha.hainanu.edu.cn/">海南大学</a>, <br />
 海口, 海南 570228, 中国 <br />
@@ -26,9 +26,9 @@
 <a href="https://github.com/zexiansun2001">[GitHub]<a href="EnHome.html">[English Page]</a></p>
 </td></tr></table>
 <h2>关于我</h2>
-<p>我现在是一名本科三年级的学生(将于2023年6月毕业), 就读于<a href="https://ha.hainanu.edu.cn/">海南大学</a> <a href="https://hd.hainanu.edu.cn/">网络空间安全学院（密码学院）</a>。
+<p>我现在是一名本科三年级的学生(将于2023年6月毕业), 就读于<a href="https://ha.hainanu.edu.cn/">海南大学</a> <a href="https://hd.hainanu.edu.cn/scscs/">网络空间安全学院（密码学院）</a> 数据科学与大数据技术专业。
 前五个学期平均学分绩点为3.9/4.0, 专业排名:(2/56)。 现担任班级团支部书记兼班长。</p>
-<p>我的研究兴趣主要包括: 医学大数据, 金融大数据， 自然语言处理, 计算机视觉, 机器学习 等。</p>
+<p>我的研究兴趣主要包括: 医学大数据, 金融大数据，自然语言处理, 计算机视觉, 机器学习 等。</p>
 <h2>教育经历</h2>
 <table class="imgtable"><tr><td>
 <a href="https://ha.hainanu.edu.cn/"><img src="picture/Hainan_University.jpg" alt="海南大学" width="80px" /></a>&nbsp;</td>
@@ -64,11 +64,10 @@
 </li>
 </ul>  
 <ul>
-<ul>
 <li><p>企业人事信息管理系统 <br />
 </li>
 </ul>  
-<ul>
+</td></tr></table>
 <h2>竞赛获奖</h2>
 <ul>
 <li><p>(2022.8) 全国大学生信息安全竞赛 <br />
