--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a href="https://ha.hainanu.edu.cn/">海南大学</a>, <br />
 海口, 海南 570228, 中国 <br />
 手机: +86 183 6755 3667  <br />
-邮箱: su_zexian@163.com <br />
+邮箱: sun_zexian@163.com <br />
 <br />
 <a href="pdf/ZexianSun.pdf">[我的简历]</a>
 <a href="https://github.com/zexiansun2001">[GitHub]<a href="EnHome.html">[English Page]</a></p>
