--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 邮箱: sun_zexian@163.com <br />
 <br />
 <a href="pdf/ZexianSun.pdf">[我的简历]</a>
-<a href="https://github.com/zexiansun2001">[GitHub]<a href="EnHome.html">[English Page]</a></p>
+<a href="https://github.com/zexiansun2001">[GitHub]</p>
 </td></tr></table>
 <h2>关于我</h2>
 <p>我现在是一名本科三年级的学生(将于2023年6月毕业), 就读于<a href="https://ha.hainanu.edu.cn/">海南大学</a> <a href="https://hd.hainanu.edu.cn/scscs/">网络空间安全学院（密码学院）</a> 数据科学与大数据技术专业。
@@ -32,7 +32,7 @@
 <h2>教育经历</h2>
 <table class="imgtable"><tr><td>
 <a href="https://ha.hainanu.edu.cn/"><img src="picture/Hainan_University.jpg" alt="海南大学" width="80px" /></a>&nbsp;</td>
-<td align="left"><h3>本科 <a href="https://www.scuec.edu.cn/">海南大学</a> (2019.9 ~ 至今)</h3>
+<td align="left"><h3>本科 <a href="https://ha.hainanu.edu.cn/">海南大学</a> (2019.9 ~ 至今)</h3>
 <ul>
 <li><p><b>院系专业</b>: 网络空间安全学院（密码学院）, 数据科学与大数据技术</p>
 </li>
